--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmoteka</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./index.js" defer></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/header-library.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/gallery-library.html"></include>
-    <include src="./partials/modal.html"></include>
-    <include src="./partials/footer.html"></include>
+    <main>
+      <include src="./partials/gallery.html"></include>
+
+      <include src="./partials/header-library.html"></include>
+
+      <include src="./partials/gallery-library.html"></include>
+      <include src="./partials/modal.html"></include>
+    </main>
+    <footer>
+      <include src="./partials/footer.html"></include>
+    </footer>
   </body>
 </html>
