am creat foote-ul si modalul studentii GOIT

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
       <include src="./partials/gallery-library.html"></include>
       
     </main>
-    <footer>
+    <!-- Footer -->
       <include src="./partials/footer.html"></include>
-    </footer>
+      <include src="./partials/about_footer.html"></include>
+      <script src="../src/js/components/Footer.js" defer></script>
+
     <include src="./partials/modal.html"></include>
   </body>
 </html>
