--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,15 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
+    <include src="./partials/header-library.html"></include>
     <main>
       <include src="./partials/gallery.html"></include>
-
-      <include src="./partials/header-library.html"></include>
-
       <include src="./partials/gallery-library.html"></include>
-      
+      <include src="./partials/modal.html"></include>
+      <include src="./partials/trailer.html"></include>
     </main>
     <footer>
       <include src="./partials/footer.html"></include>
     </footer>
-    <include src="./partials/modal.html"></include>
   </body>
 </html>
