--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmoteka</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="icon" href="./images/browser-icon.svg" type="image/x-icon" />
     <script type="module" src="./index.js" defer></script>
   </head>
   <body>
