--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/header-library.html"></include>
+    <!-- <include src="./partials/header-library.html"></include> -->
     <main>
       <include src="./partials/gallery.html"></include>
       <include src="./partials/gallery-library.html"></include>
