am adaugat circle-up + theme switcher

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
 
     <!-- Loader / spinner -->
     <include src="./partials/loader.html"></include>
+    <include src="./partials/circle-up.html"></include>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
